Name:                yaop
Version:             0.2.0
Synopsis:            Yet Another Option Parser
Description:
  A simple wrapper over the standard System.Console.GetOpt to make options
  defining more convenient.
License:             BSD3
License-file:        LICENSE
Author:              Eugene Smolanka <esmolanka@gmail.com>
Maintainer:          Eugene Smolanka <esmolanka@gmail.com>
Category:            System
Build-type:          Simple

Extra-source-files:  examples/ex1.hs
                   , examples/ex2.hs

Cabal-version:       >=1.6

Library
  Exposed-modules:     System.Console.YAOP,
                       System.Console.YAOP.Actions,
                       System.Console.YAOP.Argument,
                       System.Console.YAOP.TH,
                       System.Console.YAOP.Types,
                       System.Console.YAOP.Selector

  Build-depends:       base>=4.2 && <5
                     , template-haskell
                     , mtl>=2.0 && <3.0
                     , split
                     , data-default
                     , containers >= 0.5
                     , tagged
